--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 .imgMessi {
     width: 100%;
     height: 100vh;
-    background-image: url(/ProyectoFinal_Poli/img/mainwp.jpg);
+    background-image: url(/img/mainwp.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
